--- a/website/models/svm.html
+++ b/website/models/svm.html
@@ -272,7 +272,7 @@ window.Quarto = {
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../models/regression.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Regression</span></a>
+ <span class="menu-text">Linear Regression</span></a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -343,7 +343,7 @@ window.Quarto = {
 <div style="float:right; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/svm_1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-1" data-glightbox="description: .lightbox-desc-1" title="Example SVM"><img src="../images/svm_1.png" class="img-fluid figure-img" alt="Example SVM"></a></p>
+<p><a href="../images/svm_1.png" class="lightbox" data-glightbox="description: .lightbox-desc-1" data-gallery="quarto-lightbox-gallery-1" title="Example SVM"><img src="../images/svm_1.png" class="img-fluid figure-img" alt="Example SVM"></a></p>
 <figcaption>Example SVM</figcaption>
 </figure>
 </div>
@@ -355,7 +355,7 @@ window.Quarto = {
 <div style="float:left; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/svm_2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" data-glightbox="description: .lightbox-desc-2" title="Example SVM"><img src="../images/svm_2.png" class="img-fluid figure-img" alt="Example SVM"></a></p>
+<p><a href="../images/svm_2.png" class="lightbox" data-glightbox="description: .lightbox-desc-2" data-gallery="quarto-lightbox-gallery-2" title="Example SVM"><img src="../images/svm_2.png" class="img-fluid figure-img" alt="Example SVM"></a></p>
 <figcaption>Example SVM</figcaption>
 </figure>
 </div>
@@ -693,13 +693,13 @@ Table&nbsp;2: The top accuracy results for each kernel, for each cost C, with th
 <div aria-describedby="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: center;">
-<p><a href="../images/svm_cm1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-3" data-glightbox="description: .lightbox-desc-3"><img src="../images/svm_cm1.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_cm1.png" class="lightbox" data-glightbox="description: .lightbox-desc-3" data-gallery="quarto-lightbox-gallery-3"><img src="../images/svm_cm1.png" class="img-fluid figure-img"></a></p>
 </div>
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: center;">
-<p><a href="../images/svm_cm2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-glightbox="description: .lightbox-desc-4"><img src="../images/svm_cm2.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_cm2.png" class="lightbox" data-glightbox="description: .lightbox-desc-4" data-gallery="quarto-lightbox-gallery-4"><img src="../images/svm_cm2.png" class="img-fluid figure-img"></a></p>
 </div>
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: center;">
-<p><a href="../images/svm_cm3.png" class="lightbox" data-gallery="quarto-lightbox-gallery-5" data-glightbox="description: .lightbox-desc-5"><img src="../images/svm_cm3.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_cm3.png" class="lightbox" data-glightbox="description: .lightbox-desc-5" data-gallery="quarto-lightbox-gallery-5"><img src="../images/svm_cm3.png" class="img-fluid figure-img"></a></p>
 </div>
 </div>
 </div>
@@ -717,7 +717,7 @@ Figure&nbsp;1: Confusion matrices of the classification output (on the test data
 <div class="quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/svm_db.png" class="lightbox" data-gallery="quarto-lightbox-gallery-6" data-glightbox="description: .lightbox-desc-6" title="Decision boundaries by the best performing overall model (RBF kernel)"><img src="../images/svm_db.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_db.png" class="lightbox" data-glightbox="description: .lightbox-desc-6" data-gallery="quarto-lightbox-gallery-6" title="Decision boundaries by the best performing overall model (RBF kernel)"><img src="../images/svm_db.png" class="img-fluid figure-img"></a></p>
 <figcaption>Decision boundaries by the best performing overall model (RBF kernel)</figcaption>
 </figure>
 </div>
@@ -727,7 +727,7 @@ Figure&nbsp;1: Confusion matrices of the classification output (on the test data
 <div class="quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/svm_db_poly.png" class="lightbox" data-gallery="quarto-lightbox-gallery-7" data-glightbox="description: .lightbox-desc-7" title="Decision boundaries by the best performing Polynomial kernel model (balanced accuracy score, achieved 53%)"><img src="../images/svm_db_poly.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_db_poly.png" class="lightbox" data-glightbox="description: .lightbox-desc-7" data-gallery="quarto-lightbox-gallery-7" title="Decision boundaries by the best performing Polynomial kernel model (balanced accuracy score, achieved 53%)"><img src="../images/svm_db_poly.png" class="img-fluid figure-img"></a></p>
 <figcaption>Decision boundaries by the best performing Polynomial kernel model (balanced accuracy score, achieved 53%)</figcaption>
 </figure>
 </div>
@@ -1163,8 +1163,8 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 </script>
 <nav class="page-navigation column-body">
   <div class="nav-page nav-page-previous">
-      <a href="../models/regression.html" class="pagination-link  aria-label=" regression"="">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Regression</span>
+      <a href="../models/regression.html" class="pagination-link  aria-label=" linear="" regression"="">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Linear Regression</span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
@@ -1174,7 +1174,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","openEffect":"zoom","closeEffect":"zoom","selector":".lightbox","loop":false});
+<script>var lightboxQuarto = GLightbox({"loop":false,"openEffect":"zoom","selector":".lightbox","descPosition":"bottom","closeEffect":"zoom"});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
