--- a/website/models/nn.html
+++ b/website/models/nn.html
@@ -246,11 +246,11 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="code">Code</h2>
 <div class="columns">
 <div class="column">
-<p>The jupyter notebook code for running the neural networks, data prep, and everything else on this page can be found <a href="https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/Bayes%20DT.ipynb">here</a>, or click on the link card to the right.</p>
+<p>The jupyter notebook code for running the neural networks, data prep, and everything else on this page can be found <a href="https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/NN%20LM.ipynb">here</a>, or click on the link card to the right.</p>
 </div><div class="column" style="width:10%;">
 <!-- Spacing column -->
 </div><div class="column" style="width:30%;">
-<p><a href="https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/Bayes%20DT.ipynb"><img src="https://github-link-card.s3.ap-northeast-1.amazonaws.com/CUBoulder-DS/CSCI-5622.png" class="img-fluid"></a></p>
+<p><a href="https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/NN%20LM.ipynb"><img src="https://github-link-card.s3.ap-northeast-1.amazonaws.com/CUBoulder-DS/CSCI-5622.png" class="img-fluid"></a></p>
 </div>
 </div>
 </section>
