--- a/website/models/pca.html
+++ b/website/models/pca.html
@@ -275,7 +275,7 @@ require(['plotly'], function(Plotly) {
 <div>
 
 </div>
-<div class="quarto-layout-panel" data-layout-ncol="2" style="float:right; width:65%; padding:2%">
+<div class="quarto-layout-panel" style="float:right; width:65%; padding:2%" data-layout-ncol="2">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
@@ -1076,7 +1076,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"openEffect":"zoom","selector":".lightbox","descPosition":"bottom","loop":false,"closeEffect":"zoom"});
+<script>var lightboxQuarto = GLightbox({"selector":".lightbox","loop":false,"openEffect":"zoom","descPosition":"bottom","closeEffect":"zoom"});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
