--- a/website/models/regression.html
+++ b/website/models/regression.html
@@ -377,23 +377,95 @@ Table&nbsp;1: A sample of the data used for the linear regression modeling. <cod
 <h2 class="anchored" data-anchor-id="code">Code</h2>
 <div class="columns">
 <div class="column">
-<p>The jupyter notebook code for running linear regression, data prep, and everything else on this page can be found <a href="https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/Bayes%20DT.ipynb">here</a>, or click on the link card to the right.</p>
+<p>The jupyter notebook code for running linear regression, data prep, and everything else on this page can be found <a href="https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/NN%20LM.ipynb">here</a>, or click on the link card to the right.</p>
 </div><div class="column" style="width:10%;">
 <!-- Spacing column -->
 </div><div class="column" style="width:30%;">
-<p><a href="https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/Bayes%20DT.ipynb"><img src="https://github-link-card.s3.ap-northeast-1.amazonaws.com/CUBoulder-DS/CSCI-5622.png" class="img-fluid"></a></p>
+<p><a href="https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/NN%20LM.ipynb"><img src="https://github-link-card.s3.ap-northeast-1.amazonaws.com/CUBoulder-DS/CSCI-5622.png" class="img-fluid"></a></p>
 </div>
 </div>
 </section>
 <section id="results" class="level2">
 <h2 class="anchored" data-anchor-id="results">Results</h2>
+<div class="columns">
+<div class="column">
+<p>The resulting fitted regression line formula is below, and can be seen in <a href="#fig-lrplot" class="quarto-xref">Figure&nbsp;2</a>.</p>
+<p><span class="math display">\[
+\textbf{y} = 0.0001696\ \textbf{x} + 3.9747
+\]</span></p>
+<ul>
+<li>y: What it predicts, aka the average number of stars a product recieved.</li>
+<li>x: The input number of reviews a product recieved.</li>
+</ul>
+</div><div class="column">
+<div id="fig-lrplot" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-lrplot-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<a href="../images/lr_plot.png" class="lightbox" data-glightbox="description: .lightbox-desc-3" data-gallery="quarto-lightbox-gallery-3"><img src="../images/lr_plot.png" class="img-fluid figure-img"></a>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-lrplot-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;2: The original data, with the fitted linear regression line plotted over.
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="columns">
+<div class="column">
+<div id="tbl-metrics" class="quarto-float anchored">
+<figure class="quarto-float quarto-float-tbl figure">
+<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-tbl" id="tbl-metrics-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Table&nbsp;2: The metrics of the fitted linear regression model.
+</figcaption>
+<div aria-describedby="tbl-metrics-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<table class="table">
+<thead>
+<tr class="header">
+<th style="text-align: left;">Metric</th>
+<th style="text-align: right;">Value</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">mean_squared_error</td>
+<td style="text-align: right;">1.819</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">mean_absolute_error</td>
+<td style="text-align: right;">0.849941</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">explained_variance_score</td>
+<td style="text-align: right;">0.00510836</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">r2_score</td>
+<td style="text-align: right;">0.00510836</td>
+</tr>
+</tbody>
+</table>
+</div>
+</figure>
+</div>
+</div><div class="column">
+<p>The metrics of the fitted model can be seen in <a href="#tbl-metrics" class="quarto-xref">Table&nbsp;2</a>. Some explanation of the metrics and how to interpret them, along with a judgement of the model is provided below:</p>
+<ul>
+<li><span class="math inline">\(R^2\)</span> Score: Represents the proportion of variance (of y) that has been explained by the independent variables in the model. It provides an indication of goodness of fit and therefore a measure of how well unseen samples are likely to be predicted by the model, through the proportion of explained variance. A score of 0 means perfect fit. As we can see, it is quite low, meaning the model ON AVERAGE predicts close to the value, even though as we can see from the fitted line, the spread of points is quite large.</li>
+<li>mean absolute error: A risk metric corresponding to the expected value of the absolute error loss or l1-norm loss. Aka, the average difference between the true and predicted value. Given that the total scale of <code>Stars</code> is only 0-5, an error of 0.85 is more than one SD away, giving large error.</li>
+<li>mean square error: A risk metric corresponding to the expected value of the squared (quadratic) error or loss. Used especially when needing a derivable loss function. In this case, it’s quite large given that the total scale of <code>Stars</code> is only 0-5.</li>
+<li>explained variance regression score: The difference between the explained variance score and the R² score, the coefficient of determination is that when the explained variance score does not account for systematic offset in the prediction. For this reason, the R² score, the coefficient of determination should be preferred in general.</li>
+</ul>
+</div>
+</div>
 </section>
 <section id="conclusions" class="level2">
 <h2 class="anchored" data-anchor-id="conclusions">Conclusions</h2>
+<p>In general, the linear regression model performed quite poorly; however, this was to be expected given that the input variables did not appear to have an easy linear relationship to model in the first place. Overall, given the nature of the relationships between the variables in this dataset, no linear relationship-based model would have performed well and other methods need to be sought out in order to make statistically significant predictions.</p>
 
 
 <div class="hidden" aria-hidden="true">
 <span class="glightbox-desc lightbox-desc-2">Figure&nbsp;1: Splom of all the numerical variables in the dataset.</span>
+<span class="glightbox-desc lightbox-desc-3">Figure&nbsp;2: The original data, with the fitted linear regression line plotted over.</span>
 </div>
 </section>
 </section>
@@ -799,7 +871,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","openEffect":"zoom","loop":false,"selector":".lightbox","closeEffect":"zoom"});
+<script>var lightboxQuarto = GLightbox({"selector":".lightbox","descPosition":"bottom","closeEffect":"zoom","loop":false,"openEffect":"zoom"});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
