--- a/website/models/nn.html
+++ b/website/models/nn.html
@@ -564,13 +564,13 @@ Table&nbsp;1: The form of the final dataset used for each of the 2 models, witho
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/nn_bs_structure.png" class="lightbox" data-gallery="quarto-lightbox-gallery-3" data-description="" title="The structure of the “Is Best Seller” NN"><img src="../images/nn_bs_structure.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/nn_bs_structure.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-3" title="The structure of the “Is Best Seller” NN"><img src="../images/nn_bs_structure.png" class="img-fluid figure-img"></a></p>
 <figcaption>The structure of the “Is Best Seller” NN</figcaption>
 </figure>
 </div>
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/nn_pd_structure.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-description="" title="The structure of the “Price Diff” NN"><img src="../images/nn_pd_structure.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/nn_pd_structure.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-4" title="The structure of the “Price Diff” NN"><img src="../images/nn_pd_structure.png" class="img-fluid figure-img"></a></p>
 <figcaption>The structure of the “Price Diff” NN</figcaption>
 </figure>
 </div>
@@ -591,13 +591,13 @@ Figure&nbsp;1: The NN structures used
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/nn_bs_loss.png" class="lightbox" data-gallery="quarto-lightbox-gallery-5" data-description="" title="“Is Best Seller” NN"><img src="../images/nn_bs_loss.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/nn_bs_loss.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-5" title="“Is Best Seller” NN"><img src="../images/nn_bs_loss.png" class="img-fluid figure-img"></a></p>
 <figcaption>“Is Best Seller” NN</figcaption>
 </figure>
 </div>
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/nn_pd_loss.png" class="lightbox" data-gallery="quarto-lightbox-gallery-6" data-description="" title="“Price Diff” NN"><img src="../images/nn_pd_loss.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/nn_pd_loss.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-6" title="“Price Diff” NN"><img src="../images/nn_pd_loss.png" class="img-fluid figure-img"></a></p>
 <figcaption>“Price Diff” NN</figcaption>
 </figure>
 </div>
@@ -672,7 +672,7 @@ Table&nbsp;2: The performance metrics of the “Is Best Seller” NN.
 <div id="fig-cm" class="quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/nn_bs_cm.png" class="lightbox" data-gallery="quarto-lightbox-gallery-7" data-description="Figure&nbsp;3: The confusion matrix of the “Is Best Seller” NN."><img src="../images/nn_bs_cm.png" class="img-fluid figure-img"></a>
+<a href="../images/nn_bs_cm.png" class="lightbox" data-description="Figure&nbsp;3: The confusion matrix of the “Is Best Seller” NN." data-gallery="quarto-lightbox-gallery-7"><img src="../images/nn_bs_cm.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;3: The confusion matrix of the “Is Best Seller” NN.
@@ -687,7 +687,7 @@ Figure&nbsp;3: The confusion matrix of the “Is Best Seller” NN.
 <div id="fig-pd-diff" class="quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-pd-diff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/nn_pd_diff.png" class="lightbox" data-gallery="quarto-lightbox-gallery-8" data-description="Figure&nbsp;4: The plot of the actual true price difference, visualized against how much of a difference the model’s predicted value was against the true value."><img src="../images/nn_pd_diff.png" class="img-fluid figure-img"></a>
+<a href="../images/nn_pd_diff.png" class="lightbox" data-description="Figure&nbsp;4: The plot of the actual true price difference, visualized against how much of a difference the model’s predicted value was against the true value." data-gallery="quarto-lightbox-gallery-8"><img src="../images/nn_pd_diff.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-pd-diff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;4: The plot of the actual true price difference, visualized against how much of a difference the model’s predicted value was against the true value.
@@ -704,9 +704,7 @@ Figure&nbsp;4: The plot of the actual true price difference, visualized against 
 <section id="conclusions" class="level2">
 <h2 class="anchored" data-anchor-id="conclusions">Conclusions</h2>
 <p>From the above results, several interesting conclusions can be drawn:</p>
-<ul>
-<li></li>
-</ul>
+<p>The networks were able to learn and fit to the data, which was evident by the loss rate during training. They also performed better than other ML methods used in this project, on the same tasks. However, they did not perform amazingly; this seems like a lack in the amount of data (in the case of price difference prediction) or not predictive enough variables in the dataset (in the case of predicting best seller).</p>
 
 
 </section>
@@ -1123,7 +1121,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"loop":false,"closeEffect":"zoom","descPosition":"bottom","selector":".lightbox","openEffect":"zoom"});</script>
+<script>var lightboxQuarto = GLightbox({"openEffect":"zoom","loop":false,"selector":".lightbox","closeEffect":"zoom","descPosition":"bottom"});</script>
 
 
 
