--- a/website/models/svm.html
+++ b/website/models/svm.html
@@ -316,7 +316,7 @@ div.csl-indent {
 <div style="float:right; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/svm_1.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-1" title="Example SVM"><img src="../images/svm_1.png" class="img-fluid figure-img" alt="Example SVM"></a></p>
+<p><a href="../images/svm_1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-1" data-description="" title="Example SVM"><img src="../images/svm_1.png" class="img-fluid figure-img" alt="Example SVM"></a></p>
 <figcaption>Example SVM</figcaption>
 </figure>
 </div>
@@ -328,7 +328,7 @@ div.csl-indent {
 <div style="float:left; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/svm_2.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-2" title="Example SVM"><img src="../images/svm_2.png" class="img-fluid figure-img" alt="Example SVM"></a></p>
+<p><a href="../images/svm_2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" data-description="" title="Example SVM"><img src="../images/svm_2.png" class="img-fluid figure-img" alt="Example SVM"></a></p>
 <figcaption>Example SVM</figcaption>
 </figure>
 </div>
@@ -670,13 +670,13 @@ Table&nbsp;2: The top accuracy results for each kernel, for each cost C, with th
 <div aria-describedby="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: center;">
-<p><a href="../images/svm_cm1.png" class="lightbox" data-description="Figure&nbsp;1: Confusion matrices of the classification output (on the test dataset) from the best performing model, for each kernel tested." data-gallery="quarto-lightbox-gallery-4"><img src="../images/svm_cm1.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_cm1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-description="Figure&nbsp;1: Confusion matrices of the classification output (on the test dataset) from the best performing model, for each kernel tested."><img src="../images/svm_cm1.png" class="img-fluid figure-img"></a></p>
 </div>
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: center;">
-<p><a href="../images/svm_cm2.png" class="lightbox" data-description="Figure&nbsp;1: Confusion matrices of the classification output (on the test dataset) from the best performing model, for each kernel tested." data-gallery="quarto-lightbox-gallery-5"><img src="../images/svm_cm2.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_cm2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-5" data-description="Figure&nbsp;1: Confusion matrices of the classification output (on the test dataset) from the best performing model, for each kernel tested."><img src="../images/svm_cm2.png" class="img-fluid figure-img"></a></p>
 </div>
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: center;">
-<p><a href="../images/svm_cm3.png" class="lightbox" data-description="Figure&nbsp;1: Confusion matrices of the classification output (on the test dataset) from the best performing model, for each kernel tested." data-gallery="quarto-lightbox-gallery-6"><img src="../images/svm_cm3.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_cm3.png" class="lightbox" data-gallery="quarto-lightbox-gallery-6" data-description="Figure&nbsp;1: Confusion matrices of the classification output (on the test dataset) from the best performing model, for each kernel tested."><img src="../images/svm_cm3.png" class="img-fluid figure-img"></a></p>
 </div>
 </div>
 </div>
@@ -693,7 +693,7 @@ Figure&nbsp;1: Confusion matrices of the classification output (on the test data
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 100.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/svm_db.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-7" title="Decision boundaries by the best performing overall model (RBF kernel)"><img src="../images/svm_db.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_db.png" class="lightbox" data-gallery="quarto-lightbox-gallery-7" data-description="" title="Decision boundaries by the best performing overall model (RBF kernel)"><img src="../images/svm_db.png" class="img-fluid figure-img"></a></p>
 <figcaption>Decision boundaries by the best performing overall model (RBF kernel)</figcaption>
 </figure>
 </div>
@@ -701,7 +701,7 @@ Figure&nbsp;1: Confusion matrices of the classification output (on the test data
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 100.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/svm_db_poly.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-8" title="Decision boundaries by the best performing Polynomial kernel model (balanced accuracy score, achieved 53%)"><img src="../images/svm_db_poly.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/svm_db_poly.png" class="lightbox" data-gallery="quarto-lightbox-gallery-8" data-description="" title="Decision boundaries by the best performing Polynomial kernel model (balanced accuracy score, achieved 53%)"><img src="../images/svm_db_poly.png" class="img-fluid figure-img"></a></p>
 <figcaption>Decision boundaries by the best performing Polynomial kernel model (balanced accuracy score, achieved 53%)</figcaption>
 </figure>
 </div>
@@ -1148,7 +1148,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","openEffect":"zoom","selector":".lightbox","descPosition":"bottom","loop":false});</script>
+<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","loop":false,"selector":".lightbox","openEffect":"zoom","descPosition":"bottom"});</script>
 
 
 
