--- a/website/models/pca.html
+++ b/website/models/pca.html
@@ -275,7 +275,7 @@ require(['plotly'], function(Plotly) {
 <div>
 
 </div>
-<div class="quarto-layout-panel" data-layout-ncol="2" style="float:right; width:65%; padding:2%">
+<div class="quarto-layout-panel" style="float:right; width:65%; padding:2%" data-layout-ncol="2">
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
 <figure class="figure">
@@ -1063,7 +1063,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","selector":".lightbox","loop":false,"openEffect":"zoom","descPosition":"bottom"});</script>
+<script>var lightboxQuarto = GLightbox({"loop":false,"selector":".lightbox","closeEffect":"zoom","openEffect":"zoom","descPosition":"bottom"});</script>
 
 
 
